# Everything_Mew

./: .gitignore  LICENSE  README.ko.md  README.md  opencode.example.json  pyproject.toml
docs/: AGENT_INSTALLATION_GUIDE.md  SDK_DESIGN_REVIEW.md  SDK_INSTALL_GUIDE_FOR_AGENTS.md
skills/everything/: SKILL.md
src/everything_mcp/: __init__.py  __main__.py  config.py  contracts.py  errors.py  query.py  server.py  syntax.py
src/everything_mcp/adapters/: __init__.py  base.py  es_cli.py  sdk_ipc.py  selection.py
tests/: pyrightconfig.json  test_adapter_selection.py  test_contracts.py  test_count.py  test_safety.py  test_search.py  test_status.py  test_syntax.py
