[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "everything-mew"
version = "0.1.0"
description = "Everything_Mew: a read-only FastMCP server that helps AI agents search with Everything"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
server = ["fastmcp>=2"]
test = ["pytest>=8"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
everything-mew = "everything_mcp.__main__:main"
everything-mcp = "everything_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/everything_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
